# esp-nist-sp800-22

./: .gitignore  CMakeLists.txt  README.md  result.txt
components/suit-test/: CMakeLists.txt  approximateEntropy.c  blockFrequency.c  cephes.c  cumulativeSums.c  dfft.c  discreteFourierTransform.c  frequency.c  linearComplexity.c  longestRunOfOnes.c  matrix.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  rnd_test.c  runs.c  serial.c  universal.c
components/suit-test/include/: c_file_operation.h  errorCode.h  rnd_test.h
main/: CMakeLists.txt  c_file_operation.c  main.c  rnd_test.c
