idf_component_register(SRCS "approximateEntropy.c" "blockFrequency.c" "cephes.c" 
                "cumulativeSums.c" "dfft.c" "discreteFourierTransform.c" "frequency.c" "linearComplexity.c"
                "longestRunOfOnes.c" "matrix.c" "nonOverlappingTemplateMatchings.c" "overlappingTemplateMatchings.c"
                "randomExcursions.c" "randomExcursionsVariant.c" "rank.c" "runs.c" "serial.c" "universal.c"
                INCLUDE_DIRS "include")

